@@ -12,6 +12,8 @@ ChangeLog
 *Note:*
 
     * Switch test runner to pytest
+    * Add official support of Python 3.10
+    * Python 3.5 and 3.6 support will be dropped in the next minor version.
 
 1.11.0 (2022-01-17)
 -------------------
